--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body {
   font-family: "Lato", sans-serif;
   box-sizing: border-box;
-  background: rgb(235, 233, 233);
+  background-image: linear-gradient(to left bottom, #051937, #004d7a, #008793, #00bf72, #a8eb12);  background-repeat: no-repeat;
   margin: 100px;
+  height: 100vh;
 }
 
 .wrapper {
@@ -16,8 +17,15 @@ body {
   font-size: 35px;
   font-weight: 100;
   margin-bottom: 30px;
-  color: rgba(203, 30, 255, 0.5);
+  color: #fff;
 } 
+
+label {
+  position: relative;
+}
+label:hover .remove {
+  display: inline-block;
+}
 
 .todoapp {
   border-radius: 5px;
@@ -47,7 +55,7 @@ label input:checked + span {
   box-shadow: none;
 }
 
-label span {
+label input + span {
   display: inline-block;
   border: solid 1px rgba(0, 0, 0, 0.7);
   border-radius: 50%;
@@ -61,15 +69,15 @@ label span {
   color: #fff;
 }
 
-li {
-  cursor: pointer;
+.todoapp label {
   text-decoration: none;
   padding: 15px 30px;
   border-bottom: solid 1px rgba(0, 0, 0, 0.3);
   text-align: left;
+  display: block;
 }
 
-li:hover {
+.todoapp label :hover {
   background: rgba(0, 0, 0, 0.1);;
 
 }
@@ -88,4 +96,16 @@ li:hover {
   border-radius: 8px;
   border: solid 1px rgba(0, 0, 0, 0.3);
   width: 220px;
+}
+
+  label .remove {
+  top: 10px;
+  right: 10px;
+  display: none;
+  position: absolute;
+
+} 
+
+label .remove:hover {
+  color: red;
 }
